<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="29dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/SwitchBtn1"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="174dp"
        android:text="@string/ok" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_marginLeft="72dp"
        android:layout_toRightOf="@+id/button1"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/SwitchBtn1"
        android:layout_alignBottom="@+id/SwitchBtn1"
        android:layout_alignLeft="@+id/button2"
        android:text="@string/choosecolor" />

   

    <com.gifplus.pcvimg.SwitchButton
        android:id="@+id/SwitchBtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="74dp"
        android:layout_marginLeft="39dp"
        android:text="@string/danmu" />

</RelativeLayout>