<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:opencv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@id/my_content_view">
    
<LinearLayout 
    android:id="@+id/topbar"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    android:layout_alignParentTop="true">
    <Button
	    android:id="@+id/Save"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    style="?android:attr/buttonBarButtonStyle"
	    android:text="@string/save" 
	    android:textColor = "@color/white"
	    android:background="@drawable/icon_btn"/>

<Button
	    android:id="@+id/Share"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    style="?android:attr/buttonBarButtonStyle"
	    android:text="@string/share" 
	    android:textColor = "@color/white"
	    android:background="@drawable/icon_btn"/>

<Button
    android:id="@+id/Browse"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="?android:attr/buttonBarButtonStyle"
    android:text="选择文件" 
    android:textColor = "@color/white"
    android:background="@drawable/icon_btn"/>
    </LinearLayout>
   
    <com.gifplus.pcvimg.GifEditView
        android:id="@+id/imageview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/topbar"
        />

	

	

	
<LinearLayout 
    android:id="@+id/pop_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_alignParentBottom="true"
     >

    
    

    <HorizontalScrollView android:layout_height="150dp" 
        android:layout_width="fill_parent"  android:id="@+id/HView">


<FrameLayout android:layout_height="match_parent" 
    android:layout_width="wrap_content"
    >


<LinearLayout android:layout_height="match_parent" android:layout_width="1000dp" android:orientation="horizontal">


<com.gifplus.pcvimg.DragGridView android:layout_height="fill_parent" android:layout_width="fill_parent" android:id="@+id/dragGridViewAdd" android:columnWidth="80dip" android:numColumns="auto_fit" android:stretchMode="spacingWidthUniform" android:verticalSpacing="1.0dip" android:horizontalSpacing="1.0dip" android:gravity="center"> </com.gifplus.pcvimg.DragGridView>

</LinearLayout>

</FrameLayout>

</HorizontalScrollView>

 
</LinearLayout>
<LinearLayout 
    android:id="@+id/botbar"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
     android:layout_alignParentBottom="true">
 <LinearLayout 
    android:id="@+id/probar"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="horizontal"
        android:layout_alignParentBottom="true">
      
    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    </LinearLayout>
   <LinearLayout 
    android:id="@+id/buttonsbar"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
   
    android:orientation="horizontal"
    android:gravity="center"
        android:layout_alignParentBottom="true">
    
    <!--      android:gravity="center_horizontal"
    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="10dp" />
        <HorizontalScrollView android:layout_height="wrap_content" android:layout_width="fill_parent"  android:id="@+id/HView1">


<FrameLayout android:layout_height="match_parent" 
    android:layout_width="wrap_content"
    >

-->
<LinearLayout android:layout_height="wrap_content"
     android:layout_width="match_parent" 
     android:gravity="center"
     android:orientation="horizontal">

<Button
    android:id="@+id/EditAdd"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="?android:attr/buttonBarButtonStyle"
    android:text="修饰" 
    android:textColor = "@color/white"
    android:background="@drawable/icon_btn"/>
<Button
    android:id="@+id/EditWhole"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="?android:attr/buttonBarButtonStyle"
    android:text="滤镜" 
    android:textColor = "@color/white"
    android:background="@drawable/icon_btn"/>
<Button
    android:id="@+id/PausePlay"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="?android:attr/buttonBarButtonStyle"
    android:text="@string/pause" 
    android:textColor = "@color/white"
    android:background="@drawable/icon_btn"/>       
<Button
    android:id="@+id/Cancel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
     android:text="撤销" 
     android:textColor = "@color/white"
     style="?android:attr/buttonBarButtonStyle"
     android:background="@drawable/icon_btn"/>


<!--  
<Button
	    android:id="@+id/Save"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    style="?android:attr/buttonBarButtonStyle"
	    android:text="@string/save" 
	    android:background="@drawable/icon_btn"/>

<Button
	    android:id="@+id/Share"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    style="?android:attr/buttonBarButtonStyle"
	    android:text="@string/share" 
	    android:background="@drawable/icon_btn"/>

<Button
    android:id="@+id/Browse"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="?android:attr/buttonBarButtonStyle"
    android:text="选择文件" 
    android:background="@drawable/icon_btn"/>

-->
</LinearLayout>
<!--  
</FrameLayout>

</HorizontalScrollView>
-->
</LinearLayout>
</LinearLayout>


</RelativeLayout>